--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,11 +16,11 @@ Fonts are separated by a & */
   --paragraph-font: Raleway, mooli;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: black;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: black; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #FFFFFF; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #000000;
+  --headline-color-on-white: rgb(16, 181, 115);  /* headlines on a white background */ 
+  --headline-color-on-color: rgb(5, 169, 103); /* headlines on a colored background */ 
+  --paragraph-color-on-white: rgba(3, 137, 164, 0.941); /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #08e1de; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #006e70;
   --nav-link-color: #89FD4C;
   --nav-background-color: #44E39E;
   --nav-hover-link-color: white;
