--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -7,8 +7,8 @@ Fonts are separated by a & */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --secondary-color: #00C0FF ;
+  --accent1-color: #00F2FA;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
