--- a/wwr/styles/ice4.css
+++ b/wwr/styles/ice4.css
@@ -10,14 +10,21 @@ main{
 
 }
 
+.title{
+    color: white;
+    font-size: 40px;
+}
+
 div:hover{
     color:black
 }
 
-ol{
+ol, li{
     align-items: center;
     color: black;
 }
+
+
 
 img{
     align-items: center;
@@ -26,4 +33,10 @@ img{
 p{
     text-align: center;
     color: white;
+    font-size: 20px;
+}
+
+.LDS{
+    font-size: 10px;
+    color: black;
 }
