--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,4 @@
+
 nav, footer{
     background-color: steelblue;
     color: white;
@@ -11,6 +12,8 @@ footer p {
 }
 footer{
     color: #08e1de;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 footer a{
     color: #08e1de;
@@ -23,6 +26,9 @@ footer a{
 }
 footer p a:hover{
     text-decoration: underline;
+}
+footer .social img {
+    padding-top: 15px;
 }
 
 a:hover {
@@ -38,6 +44,8 @@ a:hover {
 nav a{
 text-align: center;
 color: #08e1de;
+text-decoration: none;
+padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4{
@@ -46,12 +54,18 @@ color: #08e1de;
 #hero-img{
     width:100%
 }
+#logo_link{
+    padding-top: 5px;
+}
 .button-box{
     text-align: center;
 }
 
 main section{
     text-align: center;
+}
+main section img{
+    box-sizing: border-box;
 }
 #background{
     height:725px;
@@ -61,6 +75,10 @@ main section{
 
 body{
     background-color: #0C7DF2;
+    font-family: 'raleway','mooli';
+    font-size: 22px;
+    margin:0;
+    padding:0;
 }
 
 header{
@@ -74,6 +92,9 @@ nav a:hover{
     background-color: #5081b2;
     color: #08e1de;
     text-decoration: none;
+    padding:15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
 }
 .book:hover, .join:hover{
     background-color: #0DC5FC;
@@ -84,22 +105,43 @@ nav a:hover{
 }
 .home-title{
     color: #08e1de;
+    font-family: 'Raleway', 'mooli';
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+h2{
+    margin:0;
 }
 h4{
     color: #08e1de;
+}
+
+.msg {
+    background-color: #6f7364;
+    line-height: 1.5em;
+    padding: 35px;
 }
 .msg h2{
     color: #08e1de;
 }
 .msg p{
     color: #0DC5FC;
+    padding-bottom: 15px;
 }
 .logo{
     width: 80px;
 }
 .icon{
     width: 80px;
+    padding-top: 10px;
 }
 nav a {
     text-decoration: none;
+}
+.rivers-card, .camping-card, .rapids-card{
+    margin: 200px 0;
+}
+.card-img{
+    border: 10px;
 }
