--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,9 +11,12 @@ footer p {
     background-color: steelblue;
 }
 footer{
-    color: #08e1de;
+    background-color: #08e1de;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 footer a{
     color: #08e1de;
@@ -47,15 +50,34 @@ color: #08e1de;
 text-decoration: none;
 padding: 35px;
 }
-
+#hero{
+display: grid;
+grid-template-columns: 1fr 3fr 1fr;
+margin-top: -100px;
+}
 #hero-msg h1, #hero-msg h4{
     text-align: center;
 }
 #hero-img{
     width:100%
 }
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+#hero-msg h4 {
+    color: white;
+}
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
+}
 #logo_link{
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 .button-box{
     text-align: center;
@@ -70,6 +92,8 @@ main section img{
 #background{
     height:725px;
     background-color: steelblue;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 
@@ -83,10 +107,19 @@ body{
 
 header{
     background-color: #0DC5FC;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 nav a:hover{
     background-color: #0DC5FC;
     color: #08e1de;
+}
+nav a {
+    text-decoration: none;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
 }
 .book, .join{
     background-color: #5081b2;
@@ -109,7 +142,31 @@ nav a:hover{
     font-size: 2em;
     margin-top: 10px;
 }
-
+.home-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.rivers-card{
+    width: 100%;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    width: 100%;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    width: 100%;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #646e73;
+}
 h2{
     margin:0;
 }
@@ -121,6 +178,9 @@ h4{
     background-color: #6f7364;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #646e73;
 }
 .msg h2{
     color: #08e1de;
@@ -136,12 +196,62 @@ h4{
     width: 80px;
     padding-top: 10px;
 }
-nav a {
-    text-decoration: none;
-}
+
 .rivers-card, .camping-card, .rapids-card{
     margin: 200px 0;
 }
 .card-img{
-    border: 10px;
+    border: 10px solid #a1bad6;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
