color change on the footer

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -11,7 +11,7 @@ footer p {
     background-color: steelblue;
 }
 footer{
-    background-color: #08e1de;
+    background-color: #0DC5FC;
     padding: 25px 50px;
     margin-top: 200px;
     display: flex;
