--- a/styles/styles/white-water-rafting-rivers.css
+++ b/styles/styles/white-water-rafting-rivers.css
@@ -194,6 +194,10 @@ h4{
     transform: scale(1.1);
 }
 
+.rivers{
+    width: auto;
+}
+
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
