--- a/styles/styles/white-water-rafting-rivers.css
+++ b/styles/styles/white-water-rafting-rivers.css
@@ -141,13 +141,32 @@ nav {
     font-family: 'Raleway', 'mooli';
     font-size: 2em;
     margin-top: 10px;
-    text-align: center;
 }
 .home-grid{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
-
+.rivers-card{
+    width: 100%;
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+.camping-card{
+    width: 100%;
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+.rapids-card{
+    width: 100%;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.mountains{
+    width: 100%;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #646e73;
+}
 h2{
     margin:0;
 }
@@ -193,6 +212,7 @@ h4{
     opacity: .6;
     transform: scale(1.1);
 }
+
 
 .rivers{
     width: auto;
